verdaccio/verdaccio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verdaccio-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 4873
      protocol: TCP
  type: NodePort
  selector:
    app: verdaccio
