verdaccio/verdaccio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: verdaccio-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-2019-08
    alb.ingress.kubernetes.io/tags: Environment=development,owner=Architecture
spec:
  rules:
  - host: npm.infomedia.systems
    http:
      paths:
      - path: /*
        backend:
          serviceName: verdaccio-service
          servicePort: 80
